--- a/CreditNoVa-API/CreditNoVa-API/Properties/launchSettings.json
+++ b/CreditNoVa-API/CreditNoVa-API/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7099;http://localhost:5000",
+      "applicationUrl": "https://0.0.0.0:7099;http://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
